syntax = "proto3";

message CheckLeaderRequest {
  string clientID = 1;     // Optional
}

message CheckLeaderResponse {
  bool isLeader = 1;    // True if this server is the leader
  string leaderPort = 2;  // Optional: Port of the leader if known
}

service CheckLeaderService {
  rpc CheckLeader(CheckLeaderRequest) returns (CheckLeaderResponse) {}
} 